translated first post

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 
 title: "DHBW Experts"
 title_separator: "-"
-subtitle: "Finde Kommilitonen für dein Problem"
+subtitle: "Issues are temporary"
 email: "holler.lukas@student.dhbw-karlsruhe.de"
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
