--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,8 @@ defaults:
       type: posts
     values:
       layout: single
-      author_profile: false
+      classes: wide
+      author_profile: true
       read_time: true
       words_per_minute: 80
       comments: true
